<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="favorites_screen_title">"Favorites"</string>
    <string name="favorites_screen_no_saved_favorites_yet">"No saved favorites yet"</string>
    <string name="favorites_screen_no_favorites_match_search">"No favorites match your search"</string>
    <string name="favorites_screen_from_map">"From map"</string>
    <string name="favorites_screen_from_coordinates">"From coordinates"</string>
    <string name="favorites_screen_use_current_location">"Use current location"</string>
    <string name="favorites_screen_sort">"Sort"</string>
    <string name="favorites_screen_add_favorite_cd">"Add favorite"</string>
    <string name="favorites_screen_search_favorites">"Search favorites"</string>
    <string name="favorites_screen_add_a_favorite">"Add a favorite"</string>
    <string name="favorites_screen_add_a_favorite_2">"Add a favorite"</string>
    <string name="favorites_screen_more_options_cd">"More options"</string>
    <string name="favorites_screen_edit">"Edit"</string>
    <string name="favorites_screen_share">"Share"</string>
    <string name="favorites_screen_delete">"Delete"</string>
    <string name="favorites_screen_add_favorite_location">"Add favorite location"</string>
    <string name="common_name">"Name"</string>
    <string name="favorites_screen_latitude">"Latitude"</string>
    <string name="favorites_screen_longitude">"Longitude"</string>
    <string name="common_cancel">"Cancel"</string>
    <string name="common_save">"Save"</string>
    <string name="favorites_screen_edit_favorite">"Edit favorite"</string>
    <string name="favorites_screen_latitude_2">"Latitude"</string>
    <string name="favorites_screen_longitude_2">"Longitude"</string>
    <string name="map_picker_pick_location">"Pick Location"</string>
    <string name="map_picker_save_location">"Save location"</string>
    <string name="map_picker_search_location_cd">"Search location"</string>
    <string name="map_picker_save_location_cd">"Save location"</string>
</resources>
